SSDM-13578 : 2PT : Database and V3 Implementation - integration tests - make the lock list JSON deserialization work (List.of which was used before was returning an immutable list that didn't have a default constructor and made the recovery process fail)